# miro-mcp-resource-server

./: .dockerignore  .env.example  .env.production  .gitignore  AUTH10_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  CLAUDE_DESKTOP_SETUP.md  CONFIG1-MIRO-PORTAL.md  Cargo.toml  Dockerfile  PROGRESS.md  QUICKSTART.md  README.md  REFACTOR-SUMMARY.md  RUN_LOCAL.md  TESTING.md  claude_desktop_config.json  deploy_scaleway.sh  install_claude_desktop.sh  scaleway-config.json  test_adr002_local.sh  test_local.sh  test_local_http.sh  test_www_auth.sh
.claude/: settings.json
.github/workflows/: ci.yml  deploy.yml  release.yml
docs/: DEMO.md  SETUP.md  bearer_auth_usage.md  claude-desktop-config.json
planning/: adr-002-oauth-resource-server-architecture.md  adr-004-proxy-oauth-for-claude-web.md  backlog.md  deployment.md  framing.md  story-map.md  user-stories.md
planning/archive/: README.md
scripts/: deploy-container.sh  deploy.sh  pre-commit-check.sh
src/: config.rs  http_server.rs  lib.rs  main.rs
src/auth/: bearer.rs  metadata.rs  mod.rs  oauth.rs  token_validator.rs  types.rs
src/mcp/: auth_handler.rs  handlers.rs  metadata.rs  mod.rs  server.rs  tools.rs
src/miro/: client.rs  mod.rs  types.rs
src/oauth/: cookie_manager.rs  mod.rs
tests/: bearer_middleware_test.rs  mcp_protocol_test.rs  mcp_tools_test.rs  oauth_metadata_test.rs  parent_operations.rs  token_validation_test.rs.disabled
