[package]
name = "miro-mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
thiserror = "2.0"
anyhow = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
lru = "0.12"
url = "2.5"
hex = "0.4"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# JWT validation for Resource Server pattern
jsonwebtoken = "9.3"
base64 = "0.22"

# Optional: MCP stdio transport (requires rmcp - nightly only)
rmcp = { version = "0.6", features = ["server", "transport-io", "transport-streamable-http-server", "auth", "macros"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
serial_test = "3.0"

[features]
# Full MCP server with stdio transport (requires rmcp - nightly only)
stdio-mcp = ["rmcp"]
# Default: HTTP server only (stable Rust, Resource Server pattern)
default = []
test-utils = []

[[bin]]
name = "server"
path = "src/bin/server.rs"
# No required-features - builds without rmcp (Resource Server pattern)
